Changelog for ETL-Yertl

{{ $NEXT }}

0.037     2017-10-27 17:27:41-05:00 America/Chicago

    [Fixed]

    - Fixed test that depended on YAML.pm (which we removed as
      a dependency). Now the test uses YAML::Tiny instead. Thanks
      @ltriant! (Github #155)

0.036     2017-10-25 23:32:12-05:00 America/Chicago

    [Removed]

    - Removed the `ymask` command and associated prereqs. This command
      just wasn't very useful, and depended on a module that requires
      a compiler.

    [Added]

    - Added `parse_time` function to `yq`. This function parses
      a date/time string into a UNIX epoch.

    - Added epoch timestamps as an allowed format for `yts` time series
      timestamps.

    - Add default timestamps of "now" in `yts`. This makes all time
      series databases the same and makes it easier to add metrics.

    - Added 'LINUX.PROC.LOADAVG' and 'LINUX.PROC.UPTIME' patterns to
      `ygrok` to parse the `/proc/loadavg` and `/proc/uptime` files on
      Linux systems.

    [Fixed]

    - Reduced version requirement for List::Util. This continues our
      quest to be installable on a core Perl 5.10 without a compiler.

    - Removed unused prereq (Text::Trim).

0.035     2017-10-18 20:52:11-05:00 America/Chicago

    [Fixed]

    - Removed 'Z' time zone indicator from yts input/output and time
      series adapters. Time zone does not enter in to any of the things
      we're doing with time series. If users need to do things with time
      zones, they'll have to do it themselves (poor souls).

0.034     2017-10-12 19:45:03-05:00 America/Chicago

    [Fixed]

    - Fixed a race condition that could cause `yts` to read the data and
      not write the data passed-in on `STDIN`. This requires a new
      dependency, IO::Interactive.

    - Removed dependencies on some modules to reduce the memory
      footprint and improve startup times:

      * DateTime
      * Moo
      * Type::Tiny
