@@ -2,6 +2,11 @@ Changelog for ETL-Yertl
 
 {{ $NEXT }}
 
+    [Fixed]
+
+    - Fixed a problem with timestamps on InfluxDB being expressed in
+      scientific notation.
+
 0.037     2017-10-27 17:27:41-05:00 America/Chicago
 
     [Fixed]
